# app/Http/Requests/EtudiantRequest.php
@@ -29,7 +29,9 @@ class EtudiantRequest extends FormRequest
             'nom_etudiant'=>'required | string ',
             'prenom_etudiant'=>'required | string',
             'CNE'=>'required | string',
-            'photo'=>'required | string'
+            'photo'=>'required | string',
+            'codeApogee'=>'required | integer',
+            'id_rapport'=>'exists:rapports,id_rapport | integer',
         ];
     }
     public function failedValidation(Validator $validator){
@@ -47,9 +49,8 @@ class EtudiantRequest extends FormRequest
             'codeApogee.required'=>"le code apogee de l'etudiant doit etre fourni",
             'codeApogee.unique' =>"le code apogee de l'etudiant doit être unique",
             'codeApogee.integer' =>"le code apogee doit être un  nombre entier",
-            'id_rapport.required'=>'le id de rapport doit etre fourni',
             'id_rapport.integer'=>'le id du rapport doit etre entier',
-            'id_rapport.exists:rapports,id_rapport'=>'le id du rapport doit etre existe',
+            'id_rapport.exists'=>'le id du rapport doit etre existe',
             'nom_etudiant.required'=>"le nom d'etudiant doit être fourni",
             'nom_etudiant.string'=>"la nom d'etudiant doit être un string",
             'prenom_etudiant.required'=>"le prenom d'etudiant doit être fourni",
@@ -57,7 +58,10 @@ class EtudiantRequest extends FormRequest
             'CNE.required'=>"le CNE d'etudiant doit être fourni",
             'CNE.string'=>"la CNE d'etudiant doit être un string",
             'photo.required'=>"la photo d'etudiant doit être fourni",
-            'photo.string'=>"la photo d'etudiant doit être un string"
+            'photo.string'=>"la photo d'etudiant doit être un string",
+            'codeApogee.required'=>"le code apogee d'etudiant doit être fourni",
+            'codeApogee.integer'=>"le code apogee d'etudiant doit être un entier",
+
             
         ];
     }
